Update for TorchText 0.3
- reworded a lot of the explanations
- fixed a lot of typos
- updated some images and moved new ones to assets folder

- fixed deterministic evaluation with `torch.backends.cudnn.deterministic = True`

- tensor_type in Fields becomes dtype
- changed train, valid, test TorchText dataset objects to be named train_data, valid_data and test_data

- TorchText iterators now have `repeat = False` by default, so removed
- TorchText iterators now take a `torch.device` instead of an int representing the GPU number (and -1 for CPU)

- `F.sigmoid` is now `torch.sigmoid`

- padding sentences in the CNN model is now fixed (before spaCy would tokenize the <pad> token into three separate tokens)

--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -6,10 +6,7 @@
    "source": [
     "# 3 - Faster Sentiment Analysis\n",
     "\n",
-    "In the previous notebook, we managed to achieve a decent test accuracy of ~85% using all of the common techniques used for sentiment analysis. In this notebook, we'll implement a model that achieves comparable results a lot faster. More specifically, we'll be implementing the \"FastText\" model from the paper [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759).\n",
-    "\n",
-    "\n",
-    "This will allow us to achieve the same ~85% test accuracy as the last model, but much faster."
+    "In the previous notebook we managed to achieve a decent test accuracy of ~85% using all of the common techniques used for sentiment analysis. In this notebook, we'll implement a model that gets comparable results whilst training significantly faster. More specifically, we'll be implementing the \"FastText\" model from the paper [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759)."
    ]
   },
   {
@@ -69,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TorchText `Field`s have a `preprocessing` argument. A function passed here will be applied to a sentence after it has been tokenized (transformed from a string into a list of tokens), but before it has been indexed (transformed from a token to an integer). Here, we pass our `generate_bigrams` function."
+    "TorchText `Field`s have a `preprocessing` argument. A function passed here will be applied to a sentence after it has been tokenized (transformed from a string into a list of tokens), but before it has been indexed (transformed from a list of tokens to a list of indexes). This is where we'll pass our `generate_bigrams` function."
    ]
   },
   {
@@ -86,9 +83,10 @@
     "\n",
     "torch.manual_seed(SEED)\n",
     "torch.cuda.manual_seed(SEED)\n",
+    "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "TEXT = data.Field(tokenize='spacy', preprocessing=generate_bigrams)\n",
-    "LABEL = data.LabelField(tensor_type=torch.FloatTensor)"
+    "LABEL = data.LabelField(dtype=torch.float)"
    ]
   },
   {
@@ -106,9 +104,9 @@
    "source": [
     "import random\n",
     "\n",
-    "train, test = datasets.IMDB.splits(TEXT, LABEL)\n",
+    "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train, valid = train.split(random_state=random.seed(SEED))"
+    "train_data, valid_data = train_data.split(random_state=random.seed(SEED))"
    ]
   },
   {
@@ -124,8 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train, max_size=25000, vectors=\"glove.6B.100d\")\n",
-    "LABEL.build_vocab(train)"
+    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
+    "LABEL.build_vocab(train_data)"
    ]
   },
   {
@@ -143,11 +141,12 @@
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
-    "    (train, valid, test), \n",
+    "    (train_data, valid_data, test_data), \n",
     "    batch_size=BATCH_SIZE, \n",
-    "    sort_key=lambda x: len(x.text), \n",
-    "    repeat=False)"
+    "    device=device)"
    ]
   },
   {
@@ -158,19 +157,19 @@
     "\n",
     "This model has far fewer parameters than the previous model as it only has 2 layers that have any parameters, the embedding layer and the linear layer. There is no RNN component in sight!\n",
     "\n",
-    "Instead, it first calculates the word embedding for each word using the `Embedding` layer, then calculates the average of all of the word embeddings and feeds this through the `Linear` layer, and that's it!\n",
+    "Instead, it first calculates the word embedding for each word using the `Embedding` layer (purple), then calculates the average of all of the word embeddings and feeds this through the `Linear` layer (silver), and that's it!\n",
     "\n",
     "![](https://i.imgur.com/e0sWZoZ.png)\n",
     "\n",
-    "We implement the averaging with the `avg_pool2d` (average pool 2-dimensions) function. Initially, you may think using a 2-dimensional pooling seems strange, surely our sentences are 1-dimensional, not 2-dimensional? However, you can think of the word embeddings as a 2-dimensional grid, where the ones are along one axis and the dimensions of the word embeddings are along another. In the image below is an example sentence after being converted into 5-dimensional word embeddings, with the words along the vertical axis and the embeddings along the horizontal axis.\n",
+    "We implement the averaging with the `avg_pool2d` (average pool 2-dimensions) function. Initially, you may think using a 2-dimensional pooling seems strange, surely our sentences are 1-dimensional, not 2-dimensional? However, you can think of the word embeddings as a 2-dimensional grid, where the words are along one axis and the dimensions of the word embeddings are along the other. The image below is an example sentence after being converted into 5-dimensional word embeddings, with the words along the vertical axis and the embeddings along the horizontal axis. Each element in this [4x5] tensor is represented by a green block.\n",
     "\n",
     "![](https://i.imgur.com/SSH25NT.png)\n",
     "\n",
-    "The `avg_pool2d` passes a filter of size `embedded.shape[1]` (i.e. the length of the sentence) by 1. This is shown in pink in the image below.\n",
+    "The `avg_pool2d` uses a filter of size `embedded.shape[1]` (i.e. the length of the sentence) by 1. This is shown in pink in the image below.\n",
     "\n",
     "![](https://i.imgur.com/U7eRnIe.png)\n",
     "\n",
-    "The average value of all of the dimensions is calculated and concatenated into a 5-dimensional (in our pictoral examples, 100-dimensional in the code) tensor for each sentence. This tensor is then passed through the linear layer to produce our prediction."
+    "The filter then slides to the right, calculating the average of the next column of embedding values for each word in the sentence. After the filter has covered all embedding dimensions, we get a [1x5] tensor. This tensor is then passed through the linear layer to produce our prediction."
    ]
   },
   {
@@ -180,6 +179,7 @@
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "class FastText(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, output_dim):\n",
@@ -304,8 +304,6 @@
    "source": [
     "criterion = nn.BCEWithLogitsLoss()\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
     "model = model.to(device)\n",
     "criterion = criterion.to(device)"
    ]
@@ -323,15 +321,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn.functional as F\n",
-    "\n",
     "def binary_accuracy(preds, y):\n",
     "    \"\"\"\n",
     "    Returns accuracy per batch, i.e. if you get 8/10 right, this returns 0.8, NOT 8\n",
     "    \"\"\"\n",
     "\n",
     "    #round predictions to the closest integer\n",
-    "    rounded_preds = torch.round(F.sigmoid(preds))\n",
+    "    rounded_preds = torch.round(torch.sigmoid(preds))\n",
     "    correct = (rounded_preds == y).float() #convert into float for division \n",
     "    acc = correct.sum()/len(correct)\n",
     "    return acc"
@@ -430,22 +426,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ben/.conda/envs/pytorch04/lib/python3.6/site-packages/torchtext/data/field.py:322: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
-      "  return Variable(arr, volatile=not train)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Train Loss: 0.688, Train Acc: 56.85%, Val. Loss: 0.644, Val. Acc: 71.34%\n",
-      "Epoch: 02, Train Loss: 0.656, Train Acc: 70.80%, Val. Loss: 0.523, Val. Acc: 75.57%\n",
-      "Epoch: 03, Train Loss: 0.585, Train Acc: 79.04%, Val. Loss: 0.447, Val. Acc: 79.60%\n",
-      "Epoch: 04, Train Loss: 0.505, Train Acc: 83.24%, Val. Loss: 0.423, Val. Acc: 82.47%\n",
-      "Epoch: 05, Train Loss: 0.439, Train Acc: 85.92%, Val. Loss: 0.395, Val. Acc: 85.01%\n"
+      "| Epoch: 01 | Train Loss: 0.688 | Train Acc: 56.85% | Val. Loss: 0.644 | Val. Acc: 71.34% |\n",
+      "| Epoch: 02 | Train Loss: 0.656 | Train Acc: 70.80% | Val. Loss: 0.523 | Val. Acc: 75.57% |\n",
+      "| Epoch: 03 | Train Loss: 0.585 | Train Acc: 79.04% | Val. Loss: 0.447 | Val. Acc: 79.60% |\n",
+      "| Epoch: 04 | Train Loss: 0.505 | Train Acc: 83.24% | Val. Loss: 0.423 | Val. Acc: 82.47% |\n",
+      "| Epoch: 05 | Train Loss: 0.439 | Train Acc: 85.92% | Val. Loss: 0.395 | Val. Acc: 85.01% |\n"
      ]
     }
    ],
@@ -457,7 +445,7 @@
     "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
     "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
-    "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:.3f}, Val. Acc: {valid_acc*100:.2f}%')"
+    "    print(f'| Epoch: {epoch+1:02} | Train Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}% | Val. Loss: {valid_loss:.3f} | Val. Acc: {valid_acc*100:.2f}% |')"
    ]
   },
   {
@@ -475,25 +463,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ben/.conda/envs/pytorch04/lib/python3.6/site-packages/torchtext/data/field.py:322: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
-      "  return Variable(arr, volatile=not train)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.387, Test Acc: 85.16%\n"
+      "| Test Loss: 0.387 | Test Acc: 85.16% |\n"
      ]
     }
    ],
    "source": [
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
-    "print(f'Test Loss: {test_loss:.3f}, Test Acc: {test_acc*100:.2f}%')"
+    "print(f'| Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}% |')"
    ]
   },
   {
@@ -519,7 +499,7 @@
     "    indexed = [TEXT.vocab.stoi[t] for t in tokenized]\n",
     "    tensor = torch.LongTensor(indexed).to(device)\n",
     "    tensor = tensor.unsqueeze(1)\n",
-    "    prediction = F.sigmoid(model(tensor))\n",
+    "    prediction = torch.sigmoid(model(tensor))\n",
     "    return prediction.item()"
    ]
   },
@@ -538,7 +518,7 @@
     {
      "data": {
       "text/plain": [
-       "2.414054449673131e-07"
+       "2.414095661151805e-07"
       ]
      },
      "execution_count": 18,
